[tool.poetry]
name = "neuropace-db"
version = "0.1.0"
description = "NeuroPace DB Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/akhambhati/neuropace-db"
repository = "https://github.com/akhambhati/neuropace-db"
keywords = ["NeuroPace", "RNS"]
authors = ["Ankit Khambhati <akhambhati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {version = "^6.3.2", extras = ["toml"]}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["neuropace_db"]

[tool.coverage.report]
show_missing = true
fail_under = 100
